// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compact variant of ic-stepper component should render a compact step with no step status 1`] = `
<ic-stepper class="ic-stepper-compact" id="custom-stepper" variant="compact">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1" class="ic-step-compact" heading="First" role="listitem">
    <template shadowrootmode="open">
      <div class="compact-step-active step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="1" progress="20" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            First
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              1 of 5
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Second With a Very Long Title
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="ic-step-compact show" current="" heading="Second With a Very Long Title" role="listitem" subheading="Optional subtitle that is long and should wrap" type="current">
    <template shadowrootmode="open">
      <div class="compact-step-active current step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="2" progress="40" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Second With a Very Long Title
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              2 of 5
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <ic-typography variant="caption">
                Optional subtitle that is long and should wrap
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Third
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3. Not required" class="ic-step-compact" heading="Third" role="listitem" type="disabled">
    <template shadowrootmode="open">
      <div class="compact-step-disabled disabled step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator not-required" inner-label="3" progress="60" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Third
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              3 of 5
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <span aria-hidden="true" class="step-icon warning-icon">
                svg
              </span>
              <ic-typography variant="caption">
                Not required
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Fourth title that is long and should wrap
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4. Completed" class="ic-step-compact" heading="Fourth title that is long and should wrap" role="listitem" subheading="Optional Subtitle" type="completed">
    <template shadowrootmode="open">
      <div class="compact-step-completed step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="4" progress="80" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Fourth title that is long and should wrap
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              4 of 5
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <span aria-hidden="true" class="check-icon step-icon">
                svg
              </span>
              <ic-typography variant="caption">
                Optional Subtitle
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Fifth and final step
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 5. Completed" class="ic-step-compact" heading="Fifth and final step" role="listitem" status="optional" subheading="Optional Subtitle" type="completed" style="max-width: none;">
    <template shadowrootmode="open">
      <div class="compact-step-completed step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="5" progress="100" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Fifth and final step
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              5 of 5
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <span aria-hidden="true" class="check-icon step-icon">
                svg
              </span>
              <ic-typography variant="caption">
                Optional Subtitle
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Last step
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`compact variant of ic-stepper component should render a stepper with hidden step information 1`] = `
<ic-stepper class="ic-stepper-compact" hide-step-info="">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="ic-step-compact" heading="Create" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="compact-step-completed step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="1" progress="25" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Create
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              1 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <span aria-hidden="true" class="check-icon step-icon">
                svg
              </span>
              <ic-typography variant="caption">
                Completed
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="ic-step-compact show" heading="Read" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="compact-step-active current step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="2" progress="50" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Read
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              2 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="ic-step-compact" heading="Update" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="compact-step-active step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="3" progress="75" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Update
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              3 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="ic-step-compact last-step" heading="Delete" role="listitem" style="max-width: none;">
    <template shadowrootmode="open">
      <div class="compact-step-active step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="4" progress="95" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Delete
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              4 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Last step
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`compact variant of ic-stepper component should render a stepper without step titles 1`] = `
<ic-stepper class="ic-stepper-compact">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="ic-step-compact" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="compact-step-completed step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="1" progress="25" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Step 1
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              1 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <span aria-hidden="true" class="check-icon step-icon">
                svg
              </span>
              <ic-typography variant="caption">
                Completed
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Step 2
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="ic-step-compact show" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="compact-step-active current step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="2" progress="50" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Step 2
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              2 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Step 3
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3. Not required" class="ic-step-compact" role="listitem" type="disabled" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="compact-step-disabled disabled step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator not-required" inner-label="3" progress="75" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Step 3
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              3 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
            <div class="step-status">
              <span aria-hidden="true" class="step-icon warning-icon">
                svg
              </span>
              <ic-typography variant="caption">
                Not required
              </ic-typography>
            </div>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Next
            <span class="visually-hidden">
              Step
            </span>
            : Step 4
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="ic-step-compact last-step" role="listitem" type="active" style="max-width: none;">
    <template shadowrootmode="open">
      <div class="compact-step-active step">
        <ic-loading-indicator aria-hidden="true" class="compact-step-progress-indicator" inner-label="4" progress="95" size="small"></ic-loading-indicator>
        <div class="heading-area">
          <ic-typography class="heading" variant="h4">
            Step 4
          </ic-typography>
          <div class="info-line">
            <ic-typography class="step-num" variant="caption">
              4 of 4
              <span class="visually-hidden">
                Steps
              </span>
            </ic-typography>
          </div>
          <ic-typography class="next-step" variant="subtitle-small">
            Last step
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should add the className 'last-step' to the last step in the stepper 1`] = `
<ic-stepper class="ic-stepper-default">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default" heading="Create" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default" heading="Read" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="aligned-full-width ic-step-default" heading="Update" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default last-step" heading="Delete" last-step="" role="listitem" style="max-width: undefinedpx;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should ignore the connectorWidth prop if the stepper is set to be aligned full-width 1`] = `
<ic-stepper class="ic-stepper-default" connector-width="150">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default" heading="Create" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default" heading="Read" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="aligned-full-width ic-step-default" heading="Update" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default last-step" heading="Delete" role="listitem" style="max-width: undefinedpx;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should render a full-width stepper 1`] = `
<ic-stepper class="ic-stepper-default">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default" heading="Create" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default" heading="Read" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="aligned-full-width ic-step-default" heading="Update" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default last-step" heading="Delete" role="listitem" style="max-width: undefinedpx;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should render a left-aligned stepper 1`] = `
<ic-stepper aligned="left" class="ic-stepper-aligned-left ic-stepper-default">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="ic-step-default" heading="Create" role="listitem" type="completed" style="width: 9.25rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="step-connect" style="width: 6.25rem;"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="ic-step-default" heading="Read" role="listitem" type="current" style="width: 9.25rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="step-connect" style="width: 6.25rem;">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="ic-step-default" heading="Update" role="listitem" style="width: 9.25rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="step-connect" style="width: 6.25rem;"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="ic-step-default last-step" heading="Delete" role="listitem" style="max-width: 9.25rem; width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should render a stepper with a custom connector width 1`] = `
<ic-stepper aligned="left" class="ic-stepper-aligned-left ic-stepper-default" connector-width="150">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="ic-step-default" heading="Create" role="listitem" type="completed" style="width: 12.375rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="step-connect" style="width: 9.375rem;"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="ic-step-default" heading="Read" role="listitem" type="current" style="width: 12.375rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="step-connect" style="width: 9.375rem;">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="ic-step-default" heading="Update" role="listitem" style="width: 12.375rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="step-connect" style="width: 9.375rem;"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="ic-step-default last-step" heading="Delete" role="listitem" style="max-width: 12.375rem; width: 12.375rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should render a stepper with hidden step info 1`] = `
<ic-stepper class="ic-stepper-default" hide-step-info="">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default" heading="Create" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area visually-hidden">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default" heading="Read" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area visually-hidden">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="aligned-full-width ic-step-default" heading="Update" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area visually-hidden">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default last-step" heading="Delete" role="listitem" style="max-width: undefinedpx;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area visually-hidden">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should render a stepper with slotted step headings 1`] = `
<ic-stepper class="ic-stepper-default">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <slot name="heading"></slot>
        </div>
      </div>
    </template>
    <span slot="heading">
      Create
    </span>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <slot name="heading"></slot>
        </div>
      </div>
    </template>
    <span slot="heading">
      Read
    </span>
  </ic-step>
  <ic-step aria-label="Step 3" class="aligned-full-width ic-step-default" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <slot name="heading"></slot>
        </div>
      </div>
    </template>
    <span slot="heading">
      Update
    </span>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default last-step" role="listitem" style="max-width: 0px;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <slot name="heading"></slot>
        </div>
      </div>
    </template>
    <span slot="heading">
      Delete
    </span>
  </ic-step>
</ic-stepper>
`;

exports[`default variant of ic-stepper component should render a stepper without step titles 1`] = `
<ic-stepper class="ic-stepper-default">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3. Not required" class="aligned-full-width ic-step-default" role="listitem" type="disabled" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="disabled step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default last-step" role="listitem" type="active" style="max-width: undefinedpx;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;

exports[`switch between the compact and default stepper depending on whether the stepper has a scroll should render a dark theme stepper 1`] = `
<ic-stepper class="ic-stepper-default ic-theme-dark" theme="dark">
  <template shadowrootmode="open">
    <ul class="step-item-list">
      <slot></slot>
    </ul>
  </template>
  <ic-step aria-label="Step 1. Completed" class="aligned-full-width ic-step-default ic-theme-dark" heading="Create" role="listitem" type="completed" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="completed step">
        <div class="step-top">
          <div class="step-icon">
            <div aria-hidden="true" class="step-icon-inner">
              <span class="check-icon">
                svg
              </span>
            </div>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Create
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-current="step" aria-label="Step 2" class="aligned-full-width ic-step-default ic-theme-dark" heading="Read" role="listitem" type="current" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="current step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                2
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect">
            <div class="step-connect-inner"></div>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Read
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 3" class="aligned-full-width ic-step-default ic-theme-dark" heading="Update" role="listitem" style="width: 0rem; min-width: 9.25rem;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                3
              </span>
            </ic-typography>
          </div>
          <div class="aligned-full-width step-connect"></div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Update
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
  <ic-step aria-label="Step 4" class="aligned-full-width ic-step-default ic-theme-dark last-step" heading="Delete" role="listitem" style="max-width: undefinedpx;">
    <template shadowrootmode="open">
      <div class="active step">
        <div class="step-top">
          <div class="step-icon">
            <ic-typography variant="subtitle-small">
              <span aria-hidden="true" class="step-icon-inner">
                4
              </span>
            </ic-typography>
          </div>
        </div>
        <div class="heading-area">
          <ic-typography class="heading" variant="subtitle-large">
            Delete
          </ic-typography>
        </div>
      </div>
    </template>
  </ic-step>
</ic-stepper>
`;
